--- a/pages/product-opt.html
+++ b/pages/product-opt.html
@@ -121,7 +121,7 @@
                 alt="Celluloid Combi 產品1"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -139,7 +139,7 @@
                 alt="Celluloid Combi 產品2"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -157,7 +157,7 @@
                 alt="Celluloid Combi 產品3"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -175,7 +175,7 @@
                 alt="Celluloid Combi 產品4"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -193,7 +193,7 @@
                 alt="Celluloid Combi 產品5"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -211,7 +211,7 @@
                 alt="Celluloid Combi 產品6"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -229,7 +229,7 @@
                 alt="Celluloid Combi 產品7"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -247,7 +247,7 @@
                 alt="Celluloid Combi 產品8"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -265,7 +265,7 @@
                 alt="Celluloid Combi 產品9"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -283,7 +283,7 @@
                 alt="Celluloid Combi 產品10"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -301,7 +301,7 @@
                 alt="Celluloid Combi 產品11"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -319,7 +319,7 @@
                 alt="Celluloid Combi 產品12"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -350,7 +350,7 @@
                 alt="NEW COLLECTION 產品1"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -368,7 +368,7 @@
                 alt="NEW COLLECTION 產品2"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -386,7 +386,7 @@
                 alt="NEW COLLECTION 產品3"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -404,7 +404,7 @@
                 alt="NEW COLLECTION 產品4"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -422,7 +422,7 @@
                 alt="NEW COLLECTION 產品5"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -440,7 +440,7 @@
                 alt="NEW COLLECTION 產品6"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
