--- a/pages/special-project.html
+++ b/pages/special-project.html
@@ -83,8 +83,8 @@
             <h3 class="fs-4 fs-sm-2 mb-4 font-roboto">
               2020 Valentine’s Special
             </h3>
-            <ul>
-              <li class="mb-10">
+            <div class="article-area">
+              <div class="mb-10">
                 <img
                   src="../assets/images/blogpage-1.png"
                   class="mb-2"
@@ -95,8 +95,8 @@
                   本次拍攝的鏡框款式與 NEEDS CLASSIC
                   聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！
                 </p>
-              </li>
-              <li class="mb-10">
+              </div>
+              <div class="mb-10">
                 <img
                   src="../assets/images/blogpage-2.png"
                   class="mb-2"
@@ -107,8 +107,8 @@
                   本次拍攝的鏡框款式與 NEEDS CLASSIC
                   聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！
                 </p>
-              </li>
-              <li class="mb-10">
+              </div>
+              <div class="mb-10">
                 <img
                   src="../assets/images/blogpage-3.png"
                   class="mb-2"
@@ -119,8 +119,8 @@
                   本次拍攝的鏡框款式與 NEEDS CLASSIC
                   聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！
                 </p>
-              </li>
-              <li class="mb-10">
+              </div>
+              <div class="mb-10">
                 <img
                   src="../assets/images/blogpage-4.png"
                   class="mb-2"
@@ -135,8 +135,8 @@
                   快快帶上另一半 <br />
                   讓彼此每一次睜開眼，都被愛的視線包圍!
                 </p>
-              </li>
-            </ul>
+              </div>
+            </div>
             <div class="social-media d-flex align-items-center d-sm-none pb-4">
               <h4 class="font-roboto fw-bold text-dark-light mr-4">Share</h4>
               <ul class="d-flex align-items-center">
