--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>六角眼鏡</title>
-    <link rel="shortcut icon" href="/Hex-glasses-vite/assets/logo-favicon-bfb106bf.ico" type="image/x-icon">    <script type="module" crossorigin src="/Hex-glasses-vite/assets/main-099a797a.js"></script>
-    <link rel="stylesheet" href="/Hex-glasses-vite/assets/main-9e84304e.css">
+    <link rel="shortcut icon" href="/Hex-glasses-vite/assets/logo-favicon-bfb106bf.ico" type="image/x-icon">    <script type="module" crossorigin src="/Hex-glasses-vite/assets/main-f708cadd.js"></script>
+    <link rel="stylesheet" href="/Hex-glasses-vite/assets/main-4fa52906.css">
   </head>
   <body>
     <header class="header bg-primary py-4 pb-sm-0">
@@ -123,7 +123,7 @@
                         即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻，只要從未來過本店的新朋友，綁定官方LINE好友，都可享專屬優惠⋯⋯
                       </p>
                       <p class="d-none d-lg-block d-sm-none">
-                        一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻⋯⋯more
+                        一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻⋯⋯<a href="special-project.html" class="text-gray-400">more</a>
                       </p>
                     </div>
                     <div class="mt-auto ml-auto d-lg-none">
@@ -175,7 +175,7 @@
                         3 款單品，讓你瞬間帥氣⋯⋯more
                       </p>
                       <p class="d-none d-lg-block d-sm-none">
-                        一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻⋯⋯more
+                        一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻⋯⋯<a href="special-project.html" class="text-gray-400">more</a>
                       </p>
                     </div>
                     <div class="mt-auto ml-auto d-lg-none">
@@ -227,7 +227,7 @@
                         年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，俐落時髦的造型搭配一件簡單的白襯衫就相當有型，是喜愛時尚質感人士絕不能錯過的必備款式⋯⋯
                       </p>
                       <p class="d-none d-lg-block d-sm-none">
-                        一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻⋯⋯more
+                        一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻⋯⋯<a href="special-project.html" class="text-gray-400">more</a>
                       </p>
                     </div>
                     <div class="mt-auto ml-auto d-lg-none">
@@ -280,7 +280,7 @@
                       </p>
                       <p class="d-none d-lg-block d-sm-none">
                         2020
-                        年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，⋯⋯more
+                        年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，⋯⋯<a href="special-project.html" class="text-gray-400">more</a>
                       </p>
                     </div>
                     <div class="mt-auto ml-auto d-lg-none">
@@ -331,7 +331,7 @@
                       </p>
                       <p class="d-none d-lg-block d-sm-none">
                         2020
-                        年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，⋯⋯more
+                        年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，⋯⋯<a href="special-project.html" class="text-gray-400">more</a>
                       </p>
                     </div>
                     <div class="mt-auto ml-auto d-lg-none">
