--- a/special-project.html
+++ b/special-project.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>六角眼鏡</title>
-    <link rel="shortcut icon" href="/Hex-glasses-vite/assets/logo-favicon-bfb106bf.ico" type="image/x-icon">    <script type="module" crossorigin src="/Hex-glasses-vite/assets/main-099a797a.js"></script>
-    <link rel="stylesheet" href="/Hex-glasses-vite/assets/main-9e84304e.css">
+    <link rel="shortcut icon" href="/Hex-glasses-vite/assets/logo-favicon-bfb106bf.ico" type="image/x-icon">    <script type="module" crossorigin src="/Hex-glasses-vite/assets/main-f708cadd.js"></script>
+    <link rel="stylesheet" href="/Hex-glasses-vite/assets/main-4fa52906.css">
   </head>
   <body>
     <header class="header bg-primary py-4 pb-sm-0">
@@ -124,8 +124,8 @@
             <h3 class="fs-4 fs-sm-2 mb-4 font-roboto">
               2020 Valentine’s Special
             </h3>
-            <ul>
-              <li class="mb-10">
+            <div class="article-area">
+              <div class="mb-10">
                 <img
                   src="/Hex-glasses-vite/assets/blogpage-1-89258247.png"
                   class="mb-2"
@@ -136,8 +136,8 @@
                   本次拍攝的鏡框款式與 NEEDS CLASSIC
                   聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！
                 </p>
-              </li>
-              <li class="mb-10">
+              </div>
+              <div class="mb-10">
                 <img
                   src="/Hex-glasses-vite/assets/blogpage-2-feff0706.png"
                   class="mb-2"
@@ -148,8 +148,8 @@
                   本次拍攝的鏡框款式與 NEEDS CLASSIC
                   聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！
                 </p>
-              </li>
-              <li class="mb-10">
+              </div>
+              <div class="mb-10">
                 <img
                   src="/Hex-glasses-vite/assets/blogpage-3-b7eced2d.png"
                   class="mb-2"
@@ -160,8 +160,8 @@
                   本次拍攝的鏡框款式與 NEEDS CLASSIC
                   聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！
                 </p>
-              </li>
-              <li class="mb-10">
+              </div>
+              <div class="mb-10">
                 <img
                   src="/Hex-glasses-vite/assets/blogpage-4-24f81160.png"
                   class="mb-2"
@@ -176,8 +176,8 @@
                   快快帶上另一半 <br />
                   讓彼此每一次睜開眼，都被愛的視線包圍!
                 </p>
-              </li>
-            </ul>
+              </div>
+            </div>
             <div class="social-media d-flex align-items-center d-sm-none pb-4">
               <h4 class="font-roboto fw-bold text-dark-light mr-4">Share</h4>
               <ul class="d-flex align-items-center">
