--- a/product-opt.html
+++ b/product-opt.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>六角眼鏡</title>
-    <link rel="shortcut icon" href="/Hex-glasses-vite/assets/logo-favicon-bfb106bf.ico" type="image/x-icon">    <script type="module" crossorigin src="/Hex-glasses-vite/assets/main-099a797a.js"></script>
-    <link rel="stylesheet" href="/Hex-glasses-vite/assets/main-9e84304e.css">
+    <link rel="shortcut icon" href="/Hex-glasses-vite/assets/logo-favicon-bfb106bf.ico" type="image/x-icon">    <script type="module" crossorigin src="/Hex-glasses-vite/assets/main-f708cadd.js"></script>
+    <link rel="stylesheet" href="/Hex-glasses-vite/assets/main-4fa52906.css">
   </head>
   <body>
     <header class="header bg-primary py-4 pb-sm-0">
@@ -162,7 +162,7 @@
                 alt="Celluloid Combi 產品1"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -180,7 +180,7 @@
                 alt="Celluloid Combi 產品2"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -198,7 +198,7 @@
                 alt="Celluloid Combi 產品3"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -216,7 +216,7 @@
                 alt="Celluloid Combi 產品4"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -234,7 +234,7 @@
                 alt="Celluloid Combi 產品5"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -252,7 +252,7 @@
                 alt="Celluloid Combi 產品6"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -270,7 +270,7 @@
                 alt="Celluloid Combi 產品7"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -288,7 +288,7 @@
                 alt="Celluloid Combi 產品8"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -306,7 +306,7 @@
                 alt="Celluloid Combi 產品9"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -324,7 +324,7 @@
                 alt="Celluloid Combi 產品10"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -342,7 +342,7 @@
                 alt="Celluloid Combi 產品11"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -360,7 +360,7 @@
                 alt="Celluloid Combi 產品12"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -415,7 +415,7 @@
                 alt="NEW COLLECTION 產品1"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -433,7 +433,7 @@
                 alt="NEW COLLECTION 產品2"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -451,7 +451,7 @@
                 alt="NEW COLLECTION 產品3"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -469,7 +469,7 @@
                 alt="NEW COLLECTION 產品4"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -487,7 +487,7 @@
                 alt="NEW COLLECTION 產品5"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
@@ -505,7 +505,7 @@
                 alt="NEW COLLECTION 產品6"
               />
               <div class="card-info d-flex justify-content-between">
-                <p class="product-id fs-4 font-roboto">BJ41600S</p>
+                <h4 class="product-id fs-4 font-roboto">BJ41600S</h4>
                 <p class="product-price fs-4 font-roboto text-primary">
                   NTD<strong>3,490</strong>
                 </p>
